--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,14 +6,17 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/trainer/login">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/register">Register</a>
+        <a class="nav-link" href="/trainer/register">Register</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/pokemon">My Pokemon</a>
+        <a class="nav-link" href="/trainer/myPokemon">My Pokemon</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" href="/pokemon">My First Pokemon</a>
+        </li>
     </ul>
   </div>
   <a href='#' target=''><i class='icon-facebook' style="font-size: 3.50em;"></i></a>
