--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,7 +15,7 @@
         <a class="nav-link" href="/trainer/myPokemon">My Pokemon</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/trainer/trade">Trade</a>
+        <a class="nav-link" href="/trainer/trading">Trading</a>
       </li>
           <a class="nav-link" href="/pokemon">My First Pokemon</a>
         </li>
