--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,24 +8,42 @@
     <title>Register</title>
 </head>
 
-<body>
+<body style="
+background-image: url(https://images7.alphacoders.com/592/592678.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+">
     <%- include('./partials/navbar') %>
-    <div class="container text-center">
-        <% if(locals.err) { %>
-        <%= locals.err %>
-        <% } %>
-        <form method="POST" action="/trainer/register"><br>
-            First Name: <input type="text" name="firstName"><br>
-            Last Name: <input type="text" name="lastName"><br>
-            Gender:<select name="gender">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-            </select><br>
-            Username: <input type="text" name="username"><br>
-            Email: <input type="text" name="email"><br>
-            Password: <input type="text" name="password"><br>
-            <button type="submit">Register new trainer</button>
-        </form>
+    <div class="row" style="
+    color:black; 
+    margin: 80px 250px 80px 250px; 
+    padding: 40px 80px 40px 80px;
+    border: 2px solid;
+    background-color:white ;
+    border-radius: 15px;
+    border-color: #3564AD;
+    ">
+        <div class="container text-center">
+            <% if(locals.err) { %>
+            <%= locals.err %>
+            <% } %>
+            <form method="POST" action="/trainer/register"><br>
+                First Name: <input type="text" name="firstName"><br>
+                Last Name: <input type="text" name="lastName"><br>
+                Gender:
+                <label class="radio-inline">
+                    <input type="radio" name="gender" value="male" checked>Male
+                </label>
+                <label class="radio-inline">
+                    <input type="radio" name="gender" value="female">Female
+                </label><br>
+                Username: <input type="text" name="username"><br>
+                Email: <input type="text" name="email"><br>
+                Password: <input type="password" name="password"><br>
+                <button type="submit" class="btn btn-danger background-color:black">Register new trainer</button>
+            </form>
+            <a href="/trainer/login">Already have an account?</a>
+        </div>
     </div>
 </body>
 
