--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -17,7 +17,7 @@
         <thead>
             <tr>
                 <th scope="col">No</th>
-                <th scope="col">Name</th>
+                <th scope="col">Nickname</th>
                 <th scope="col">Level</th>
                 <th scope="col">Species</th>
                 <th scope="col">Type</th>
@@ -46,10 +46,6 @@
            <% }) %>
         </tbody>
     </table>
-
-
-
-
 </body>
 
 </html>
