--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body style="
-background-image: url(https://images7.alphacoders.com/592/592678.jpg);
+background-image: url(/background.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 ">
