--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
 </style>
 
 <body style="
-background-image: url(https://images7.alphacoders.com/592/592678.jpg);
+background-image: url(/background.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 ">
