--- a/views/catchNewPokemon.ejs
+++ b/views/catchNewPokemon.ejs
@@ -33,13 +33,10 @@ position: relative;
             border-radius: 15px;
             border-color: #3564AD;
             ">
-            <img src="https://media1.tenor.com/images/ff663d4cd4fb2f60a42223aa0bc15f2a/tenor.gif?itemid=5543978">
-            <h4>Your <%- pokemon.species%> won! </h4><br>
-
-
-
-
-            <h4>Let's go back <a href="/trainer/myPokemon">home</a> :)</h4>
+            <img
+                src="http://www.yellowjacketsocial.com/wp-content/uploads/2016/07/tumblr_static_transparent_pokeball_rolling_capture_zpsc7a8eb2f.gif">
+            <h4><%- pokemon.species%> is now your pokemon! </h4><br>
+            <h4 class="text-center">Let's go back <a href="/trainer/myPokemon">home</a> :)</h4>
 
         </div>
 
