--- a/views/bid.ejs
+++ b/views/bid.ejs
@@ -55,6 +55,7 @@
                     <empty>
                 </th>
                 <td>
+                    <h1>empty</h1>
                     <-empty->
                 </td>
                 <td>
