--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,8 +14,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/trainer/trading">Trading</a>
       </li>
-      <li class="nav-item" style="margin-left:68em">
+      <li class="nav-item">
         <a class="nav-link" href="/trainer/logout">Log Out</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" href="/trainer/profile">Profile</a>
       </li>
     </ul>
   </div>
