--- a/views/myFirstPokemon.ejs
+++ b/views/myFirstPokemon.ejs
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My First Pokemon</title>
 </head>
+
 <body style="
 background-image: url(/battleBackground.png);
 background-repeat: no-repeat;
 background-size: cover;
 ">
     <%- include('./partials/navbar') %>
-    <h1>Now choose your your starting pokemon!</h1>
-    <a href="/trainer/starter?choice=bulbasaur"><img src="https://vignette.wikia.nocookie.net/pokemon/images/0/00/Bulbasaur_XY.gif/revision/latest?cb=20140319081443" style="height: 350px"></a>
-    <a href="/trainer/starter?choice=squirtle"><img src="https://vignette.wikia.nocookie.net/pokemon/images/e/e0/Squirtle_XY.gif/revision/latest?cb=20140319084442" style="height: 350px"></a>
-    <a href="/trainer/starter?choice=charmander"><img src="https://vignette.wikia.nocookie.net/pokemon/images/f/f5/Charmander_XY.gif/revision/latest?cb=20150201050431" style="height: 350px"></a>
+    <div class="container" style="margin-top: 14em;">
+        <a href="/trainer/starter?choice=bulbasaur"><img
+                src="https://vignette.wikia.nocookie.net/pokemon/images/0/00/Bulbasaur_XY.gif/revision/latest?cb=20140319081443"
+                style="height: 350px"></a>
+        <a href="/trainer/starter?choice=squirtle"><img
+                src="https://vignette.wikia.nocookie.net/pokemon/images/e/e0/Squirtle_XY.gif/revision/latest?cb=20140319084442"
+                style="height: 350px"></a>
+        <a href="/trainer/starter?choice=charmander"><img
+                src="https://vignette.wikia.nocookie.net/pokemon/images/f/f5/Charmander_XY.gif/revision/latest?cb=20150201050431"
+                style="height: 350px"></a>
+    </div>
+
+    <div class="container text-center">
+
+        <div class="row" style="
+        color:black; 
+        margin: 80px 250px 80px 250px; 
+        padding: 40px 80px 40px 80px;
+        border: 2px solid;
+        background-color:white ;
+        border-radius: 15px;
+        border-color: #3564AD;
+        ">
+            <h1>Now choose your your starting pokemon!</h1>
+
+        </div>
 </body>
+
 </html>
