--- a/views/trading.ejs
+++ b/views/trading.ejs
@@ -32,13 +32,6 @@
     font-size: 18px;
 }
 
-<<<<<<< HEAD
-<body style="
-background-image: url(/background.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-">
-=======
 a {
     text-decoration: none;
     font-size: 22px;
@@ -54,9 +47,12 @@ button:hover, a:hover {
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <%-include('./partials/navbar')%> 
 </head>
-<body>
-    <div class="card">
->>>>>>> development
+<body style="
+background-image: url(/background.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+">
+    <div class="card" style="margin-top: 23em;">
     <a class="btn btn-primary" href="/trainer/trade" role="button">Trade</a>
     <a class="btn btn-secondary" href="/trainer/bid" role="button">Bid</a>
 </div>
